reorganized App.jsx into separate components for visibility

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,17 @@
   display: none;
 }
 
+.loadButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.favoriteButton {
+  background: transparent;
+  border: none;
+}
+
 img {
   width: 200px;
   border-top-left-radius: 5px;
