--- a/src/components/PopupModal.css
+++ b/src/components/PopupModal.css
@@ -3,9 +3,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fff;
+  background-color: #ffd6d6;
   padding: 20px;
-  border: 1px solid #ddd;
+  border: none;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   width: 80%;
@@ -25,30 +25,98 @@
 .visible {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   overflow: scroll;
-
-  .leftAndRight {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
+    .popupHeader {
+        position:fixed;
+        justify-content: center;
+    }
+    .closeButton {
+        display: flex;
+        padding-left: 750px;
+        color: #aaa;
+        background-color: transparent;
+        font-size: x-large;
+        border: none;
+        font-weight: bold;
+    }
+    .close:hover{
+        text-decoration: none;
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        color: black;
+    }
+    .leftAndRight {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        padding: 20px;
 
     .right {
         display: flex;
         flex-wrap: wrap;
+        flex-direction: column;
+        text-align: left;
+        padding-top: 10px;
     }
-
-    /* .left {
-        
-    } */
   }
 }
 .notVisible {
   display: none;
 }
-.popup.visible {
-    display: flex;
-    flex-direction: row;
-    
+
+@media (max-width: 600px) {
+    img {
+        width: 200px;
+    }
+    .videoScreen {
+        width: auto;
+        height: auto;
+    }
+    .visible {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        overflow: scroll;
+
+            .popupHeader {
+                position:fixed;
+                justify-content: center;
+            }
+            .closeButton {
+                display: flex;
+                padding-left: 750px;
+                color: #aaa;
+                background-color: transparent;
+                font-size: x-large;
+                border: none;
+                font-weight: bold;
+            }
+            .close:hover{
+                text-decoration: none;
+                cursor: pointer;
+                background-color: transparent;
+                border: none;
+                color: black;
+            }
+            .leftAndRight {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                padding: 20px;
+
+                .right {
+                    display: flex;
+                    flex-wrap: wrap;
+                    flex-direction: column;
+                    text-align: left;
+                    padding-top: 10px;
+                }
+            }
+    }
 }
 
 img {
