--- a/src/App.css
+++ b/src/App.css
@@ -12,25 +12,78 @@
   padding: 10px;
 
   .sortByButton {
-    background-color:rgb(255, 255, 255);
-    border-radius: 5px;
+    background-color:rgb(191, 191, 191);
+    border-radius: 7px;
     width: 70px;
     padding: 1px;
     border: none;
   }
 }
 
-@media (max-width: 600px) {
-  .movie-card {
-    width: 100%;
+.banner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 800px;
+  padding: 10px;
+  background-color: aquamarine;
+  border-radius: 5px;
+
+  .searchBar {
+    border-radius: 7px;
+    border: none;
+    padding: 5px;
+    background-color: #dfdfdf;
+  }
+  .Submit {
+    border-radius: 7px;
+    padding: 5px;
+    font-size: small;
+    color: black;
+    background-color: transparent;
+  }
+  .Clear {
+    border-radius: 7px;
+    font-size: small;
+    color: black;
+    background-color: transparent;
   }
 
-  .search-bar {
+  .sortByButton {
+    background-color:#dfdfdf;
+    color: rgb(108, 107, 107);
+    border-radius: 7px;
+    width: 90px;
+    padding: 4px;
+    border: none;
+  }
+}
+
+.buttons{
+  display: flex;
+  gap: 10px;
+  }
+
+@media (max-width: 600px) {
+  .App-MovieCard {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .banner {
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: aquamarine;
+    border-radius: 5px;
     gap: 10px;
   }
-
-  .search-bar form {
+  .App-MovieCard {
+    display: flex;
     flex-direction: column;
   }
 }
@@ -57,36 +110,6 @@
     cursor: pointer;
     transform: scale(1.03);
   }
-}
-
-.popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 80%;
-  max-width: 600px;
-  z-index: 10;
-}
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9;
-}
-.visible {
-  display: block;
-}
-.notVisible {
-  display: none;
 }
 
 .loadButton {
