--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #141414;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -28,32 +28,37 @@
   gap: 800px;
   padding: 10px;
   background-color: aquamarine;
-  border-radius: 5px;
+  background: linear-gradient(to right, #8B786D, #D5CFC6);
+  font-family: Georgia, Times, 'Times New Roman', serif;
 
   .searchBar {
     border-radius: 7px;
     border: none;
     padding: 5px;
     background-color: #dfdfdf;
+    font-family:Georgia, Times, 'Times New Roman', serif;
   }
   .Submit {
     border-radius: 7px;
     padding: 5px;
     font-size: small;
-    color: black;
-    background-color: transparent;
+    color: white;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    background-color: #141414;
   }
   .Clear {
     border-radius: 7px;
     font-size: small;
-    color: black;
-    background-color: transparent;
+    color: white;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    background-color: #141414;
   }
 
   .sortByButton {
-    background-color:#dfdfdf;
-    color: rgb(108, 107, 107);
+    background-color: #141414;
+    color: #dfdfdf;
     border-radius: 7px;
+    font-family: Georgia, Times, 'Times New Roman', serif;
     width: 90px;
     padding: 4px;
     border: none;
@@ -78,8 +83,6 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    background-color: aquamarine;
-    border-radius: 5px;
     gap: 10px;
   }
   .App-MovieCard {
@@ -88,6 +91,9 @@
   }
 }
 
+.body {
+  background-color: #8C99A2;
+}
 .App-MovieCard {
   display: flex;
   flex-direction: row;
@@ -98,11 +104,10 @@
 
   .App-MovieContainer {
     display: flex;
-    flex-direction: row;
     border-radius: 5px;
     font-size: x-small;
     width: 200px;
-    background-color:rgb(229, 229, 229);
+    background-color: #EBF5EE;
     box-shadow: 0px 5px 5px rgba(36, 36, 36, 0.5);
   }
   .App-MovieContainer:hover {
@@ -112,10 +117,40 @@
   }
 }
 
+.likeButton {
+  background-color: transparent;
+  border: none;
+}
+.likeButton:hover {
+  cursor: pointer;
+  background-color: transparent;
+  transform: scale(1.2);
+}
+
+.watchedButton {
+  background-color: transparent;
+  border: none;
+}
+.watchedButton:hover {
+  cursor: pointer;
+  background-color: transparent;
+  transform: scale(1.2);
+}
+
 .loadButton {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 12px;
+  background-color: #8C99A2;
+
+  button {
+    padding: 8px;
+    background-color: #141414;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .favoriteButton {
@@ -123,6 +158,13 @@
   border: none;
 }
 
+.footer {
+  background-color: #141414;
+  margin-bottom: 0;
+  bottom: 0;
+  color: white;
+  padding: 5px;
+}
 img {
   width: 200px;
   border-top-left-radius: 5px;
