--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  font-family:Georgia, Times, 'Times New Roman', serif;
 }
 
 button {
   background-color: #282c34;
   color: white;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
   font-size: 16px;
   font-weight: bold;
   transition: background-color 0.3s ease;
